FEATURE:	Fixed headers to ensure size_t, NULL are always defined. size_t is not used as it may be 64bit.
CHANGE:		Added type gPoint to replace V2.x point and point_t
CHANGE:		Added type gCoord to replace V2.x coord_t
CHANGE:		Added type gPixel to replace V2.x pixel_t
CHANGE:		Added type gColor to replace V2.x color_t
CHANGE:		Added type gPowermode  to replace V2.x powermode_t,  and values gPowerXXX replace powerXXX
CHANGE:		Added type gJustify    to replace V2.x justify_t,    and values gJustifyXXX replace justifyXXX
CHANGE:		Added type gFontmetric to replace V2.x fontmetric_t, and values gFontXXX replace fontXXX
FIX:		Added gfxRealloc() to Qt port
FIX:		Fixed UC1610 driver private area initialisation
FIX:		Fixed ST7735 driver and added kapacuk changes
FEATURE:	Added keyboard support to radio buttons (by Steffan)
FEATURE:	Added internal use only GFX_COMPILESTAGE (used to control compilation)
FEATURE:	Added support for ChibiOS Kernel V5
FEATURE:	Added WS29EPD WaveShare E-Paper display


*** Release 2.8 ***
FEATURE:	Added support for 128x32 SSD1306 based displays
FIX:		Fixed recursion bug in console history
FIX:		Multithreading issue with slow window redraws and large images
FIX:		Ensure valid thread stack sizes on platforms where it matters
FEATURE:	Added support for a GFILE user provided file system
FEATURE:	Added gwinListItemSetText() to replace text in a GWIN list item
FEATURE:	Added GDISP_IMAGE_BMP_BLIT_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_PNG_BLIT_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_PNG_FILE_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_PNG_Z_BUFFER_SIZE configuration option
FEATURE:	Added GDISP_IMAGE_GIF_BLIT_BUFFER_SIZE configuration option
FIX:		Fixed extra dots when drawing anti-aliased fonts with wordwrap
FEATURE:	Increase non-UTF8 font support to 0 to 255 rather than just the true ascii set
FEATURE:	Added Fb24bpp driver for RGB888 and BGR888 packed framebuffer displays