@@ -45,7 +45,7 @@ static char whdr[32];
  * Application entry point.
  */
 int main(void) {
-	font_t			font;
+	gFont			font;
 	GFILE			*f;
 	char 			*errmsg;
 	uint32_t		toplay;
