@@ -28,7 +28,7 @@
 #include "gfx.h"
 
 /* The variables we need */
-static font_t		font;
+static gFont		font;
 static GListener	gl;
 static GHandle		ghConsole;
 static GHandle		ghKeyboard;
